Implemented the school service