@@ -8,7 +8,6 @@ import org.springframework.data.jpa.repository.JpaRepository;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Repository
 public interface ChildJpaRepo extends JpaRepository<ChildEntity, Long>, ChildRepo {
@@ -16,10 +15,16 @@ public interface ChildJpaRepo extends JpaRepository<ChildEntity, Long>, ChildRep
     default List<Child> findAllChildrenByParentId(Long id) {
         return this.findAllByParentId(id).stream()
                 .map(ChildMapper::map)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    default List<Child> findAllChildrenBySchoolId(Long id) {
+        return this.findAllBySchoolId(id).stream()
+                .map(ChildMapper::map)
+                .toList();
     }
 
     List<ChildEntity> findAllByParentId(Long id);
 
-
+    List<ChildEntity> findAllBySchoolId(Long id);
 }
